Left aligned restuls page Fixed "no restuls" message

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -97,3 +97,9 @@ ul {
     width: 100%;
     font-size: 18px;
 }
+
+
+.left-align {
+    text-align: left;
+}
+		    
